Added cellFactories to fill up the expense table. & edited all existing methods to incorperate the tableView instead of listview. Added new translations to the messages files.